font size fix and now centered on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,6 +33,7 @@
     /* margin-left: 120px;
     margin-right: 120px; */ /*margin made the text look a bit squished on mobile*/
     font-size: 25px;
+    text-align: center;
 }
 
 #tab{
